--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/folio": "^1.1",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -69,5 +70,11 @@
         }
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": {
+        "jwt-auth": {
+            "type": "git",
+            "url": "https://github.com/PHP-Open-Source-Saver/jwt-auth.git"
+        }
+    }
 }
